<resources>
    <string name="app_name">The Witcher App</string>
    <string name="title">Login</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="addPersonaje">Añadir Personaje</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="profesion">Profesión</string>
    <string name="nacion">Nación</string>
    <string name="descripcion">Descripción</string>
    <string name="imagen">Imagen</string>
    <string name="seleccionarImagen">Seleccionar Imagen</string>
    <string name="eliminarPersonaje">Eliminar Personaje</string>
</resources>