<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".vista.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutInsertar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="15dp">

        <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addPersonaje"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/layoutInsertar"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"
                app:layout_constraintEnd_toEndOf="@id/layoutInsertar"/>

        <TextView
                android:id="@+id/tvNombreInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitulo"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"/>

        <EditText
                android:id="@+id/etNombreInsertar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:textSize="15sp"
                android:singleLine="true"
                android:maxLines="1"
                android:maxLength="50"
                android:layout_marginBottom="12dp"
                app:layout_constraintTop_toBottomOf="@id/tvNombreInsertar"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"/>

        <TextView
                android:id="@+id/tvAliasInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alias"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/etNombreInsertar"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"/>

        <EditText
                android:id="@+id/etAliasInsertar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:textSize="15sp"
                android:singleLine="true"
                android:maxLines="1"
                android:maxLength="50"
                tools:text="HOLA"
                app:layout_constraintTop_toBottomOf="@id/tvAliasInsertar"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"/>

        <TextView
                android:id="@+id/tvRazaInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raza"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/etAliasInsertar"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"/>

        <EditText
                android:id="@+id/etRazaInsertar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:textSize="15sp"
                android:singleLine="true"
                android:maxLength="50"
                app:layout_constraintTop_toBottomOf="@id/tvRazaInsertar"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"/>

        <TextView
                android:id="@+id/tvDescInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/etRazaInsertar"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"/>

        <EditText
                android:id="@+id/etDescripcionInsertar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/tvDescInsertar"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"/>

        <TextView
                android:id="@+id/tvImgInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imagen"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/etDescripcionInsertar"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"/>

        <TextView
                android:id="@+id/tvImgInsertada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/tvImgInsertar"
                app:layout_constraintStart_toStartOf="@id/layoutInsertar"/>

        <Button
                android:id="@+id/btnSeleccionarImagen"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/morado"
                android:text="@string/seleccionarImagen"
                app:layout_constraintTop_toBottomOf="@id/tvImgInsertada"
                app:layout_constraintEnd_toEndOf="@id/layoutInsertar">

        </Button>

        <Button
                android:id="@+id/btnInsertar"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/addPersonaje"
                app:layout_constraintTop_toBottomOf="@id/btnSeleccionarImagen"
                app:layout_constraintEnd_toEndOf="@id/layoutInsertar">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>